# ak_lab4

./: LICENSE.md  README.md  alu.py  commands  golden_test.py  isa.py  machine.py  microcode_util.py  pyproject.toml  translator.py
.github/workflows/: pytest.yml
examples/: eam.forth  hello_user_name.forth  sort.forth  target.bin.base64  target.bin.hex
golden/: cat.yml  eam_add.yml  eam_sub.yml  euler.yml  hello.yml  hello_user_name.yml  sort.yml
python/: README.md  alu.py  commands  golden_bf_test.py  golden_test.py  isa.py  machine.py  memory.py  microcode_util.py  translator.py
python/examples/: cat.forth  euler.forth  hello.forth  hello1.forth  hello_user_name.forth  input_file.txt  sort.forth  target.bin.base64  target.bin.hex
python/golden/: cat.yml  cat_bf.yml  eam.yml  euler.yml  hello.yml  hello_bf.yml  hello_user_name.yml  sort.yml
