[tool.poetry]
name = "AccForth"
version = "0.1.0"
description = "ak lab4"
authors = ["krevetkot <ksenia.slonimskaya@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest-golden = "^0.2.2"