[tool.poetry]
name = "AccForth"
version = "0.1.0"
description = "ak lab4"
authors = ["krevetkot <ksenia.slonimskaya@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest-golden = "^0.2.2"

[tool.pytest.ini_options]
enable_assertion_pass_hook = true
log_format = "%(levelname)s   machine:simulation    %(message)s"